fix extra space

--- a/css/custom.css
+++ b/css/custom.css
@@ -704,12 +704,12 @@ tr:nth-child(even) {
     border-radius: 50px;
     margin: 5px;
 }
-:target::before {
+/* :target::before {
     content: "";
   display: block;
   height: 250px; 
   padding: -250px 0 0; 
-}
+} */
 /*Back to top button */
 #toTop {
   display: none;
